# NemoTokenizer

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build_install.bat  build_install.sh  example.py  pyproject.toml  setup.py
python/: tokenizer.py
src/: binding.cpp  nemo_tokenizer.cpp  nemo_tokenizer.h
